Other - build - changes
git-svn-id: https://subversion.iil.intel.com/it/pdce/swiss/netstar/Android/MagicGate@107766 c0380dda-8755-0410-90ee-aefcdf1fbf81